--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,13 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.squareup.retrofit2/converter-gson
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
+
+    implementation("androidx.activity:activity-ktx:1.3.1")
+
+// https://developer.android.com/jetpack/androidx/releases/activity
+
+    // https://ngengesenior.medium.com/pick-image-from-gallery-in-jetpack-compose-5fa0d0a8ddaf
+
+    implementation("io.coil-kt:coil-compose:1.3.2")
+
 }
